version/0.13/_sources/api/ansys/dpf/core/operators/math/fft_multi_harmonic_minmax/fft_multi_harmonic_minmax.rst.txt






:class:`fft_multi_harmonic_minmax`
==================================

.. py:class:: ansys.dpf.core.operators.math.fft_multi_harmonic_minmax.fft_multi_harmonic_minmax(fields_container=None, rpm_scoping=None, fs_ratio=None, num_subdivisions=None, max_num_subdivisions=None, num_cycles=None, use_harmonic_zero=None, calculate_time_series=None, substeps_selector=None, config=None, server=None)

   Bases: :py:obj:`ansys.dpf.core.dpf_operator.Operator`


   Evaluate min max fields on multi harmonic solution. min and max fields
   are calculated based on evaluating a fourier series sum wrt rpms and
   using the gradient method for adaptive time steping


   :param fields_container:
   :type fields_container: FieldsContainer
   :param rpm_scoping: rpm scoping, by default the fourier series sum is evaluated using all the rpms
   :type rpm_scoping: Scoping, optional
   :param fs_ratio: field or fields container with only one field is expected
   :type fs_ratio: int, optional
   :param num_subdivisions: connect number subdivisions, used for uniform discretization
   :type num_subdivisions: int, optional
   :param max_num_subdivisions: connect max number subdivisions, used to avoid huge number of sudivisions
   :type max_num_subdivisions: int, optional
   :param num_cycles: Number of cycle of the periodic signal (default is 2)
   :type num_cycles: int, optional
   :param use_harmonic_zero: use harmonic zero for first rpm (default is false)
   :type use_harmonic_zero: bool, optional
   :param calculate_time_series: calculates time series output (output pin 2), setting it to false enhance performance if only min/max are required (default is true)
   :type calculate_time_series: bool, optional
   :param substeps_selector: substeps to evaluate (frequencies), by default the operator is evaluated using all the available steps
   :type substeps_selector: optional

   :returns: * **field_min** (*FieldsContainer*)
             * **field_max** (*FieldsContainer*)
             * **all_fields** (*FieldsContainer*)

   .. rubric:: Examples

   >>> from ansys.dpf import core as dpf

   >>> # Instantiate operator
   >>> op = dpf.operators.math.fft_multi_harmonic_minmax()

   >>> # Make input connections
   >>> my_fields_container = dpf.FieldsContainer()
   >>> op.inputs.fields_container.connect(my_fields_container)
   >>> my_rpm_scoping = dpf.Scoping()
   >>> op.inputs.rpm_scoping.connect(my_rpm_scoping)
   >>> my_fs_ratio = int()
   >>> op.inputs.fs_ratio.connect(my_fs_ratio)
   >>> my_num_subdivisions = int()
   >>> op.inputs.num_subdivisions.connect(my_num_subdivisions)
   >>> my_max_num_subdivisions = int()
   >>> op.inputs.max_num_subdivisions.connect(my_max_num_subdivisions)
   >>> my_num_cycles = int()
   >>> op.inputs.num_cycles.connect(my_num_cycles)
   >>> my_use_harmonic_zero = bool()
   >>> op.inputs.use_harmonic_zero.connect(my_use_harmonic_zero)
   >>> my_calculate_time_series = bool()
   >>> op.inputs.calculate_time_series.connect(my_calculate_time_series)
   >>> my_substeps_selector = dpf.()
   >>> op.inputs.substeps_selector.connect(my_substeps_selector)

   >>> # Instantiate operator and connect inputs in one line
   >>> op = dpf.operators.math.fft_multi_harmonic_minmax(
   ...     fields_container=my_fields_container,
   ...     rpm_scoping=my_rpm_scoping,
   ...     fs_ratio=my_fs_ratio,
   ...     num_subdivisions=my_num_subdivisions,
   ...     max_num_subdivisions=my_max_num_subdivisions,
   ...     num_cycles=my_num_cycles,
   ...     use_harmonic_zero=my_use_harmonic_zero,
   ...     calculate_time_series=my_calculate_time_series,
   ...     substeps_selector=my_substeps_selector,
   ... )

   >>> # Get output data
   >>> result_field_min = op.outputs.field_min()
   >>> result_field_max = op.outputs.field_max()
   >>> result_all_fields = op.outputs.all_fields()












.. py:currentmodule:: fft_multi_harmonic_minmax

Overview
--------

.. tab-set::



   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~connect`
            - Connect an input on the operator using a pin number.
          * - :py:attr:`~connect_operator_as_input`
            - Connect an operator as an input on a pin.
          * - :py:attr:`~get_output`
            - Retrieve the output of the operator on the pin number.
          * - :py:attr:`~run`
            - Evaluate this operator.
          * - :py:attr:`~eval`
            - Evaluate this operator.


   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~inputs`
            - Enables to connect inputs to the operator
          * - :py:attr:`~outputs`
            - Enables to get outputs of the operator by evaluating it
          * - :py:attr:`~progress_bar`
            - Enable or disable progress bar display when requesting the operator's output.
          * - :py:attr:`~config`
            - Copy of the operator's current configuration.
          * - :py:attr:`~id`
            - Retrieve the unique identifier of the operator.
          * - :py:attr:`~specification`
            - Returns the Specification (or documentation) of this Operator.


   .. tab-item:: Attributes

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~name`
            - 


   .. tab-item:: Static methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~default_config`
            - Returns the default config of the operator.
          * - :py:attr:`~operator_specification`
            - Documents an Operator with its description (what the Operator does),its inputs and outputs and some properties.


   .. tab-item:: Special methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~__del__`
            - Delete this instance.
          * - :py:attr:`~__str__`
            - Describe the entity.
          * - :py:attr:`~__add__`
            - Add two fields or two fields containers.
          * - :py:attr:`~__sub__`
            - Subtract two fields or two fields containers.
          * - :py:attr:`~__pow__`
            - Raise each element of a field or a fields container to power 2.
          * - :py:attr:`~__mul__`
            - Multiply two fields or two fields containers.
          * - :py:attr:`~__truediv__`
            - Perform division with another operator or a scalar.




Import detail
-------------

.. code-block:: python

    from ansys.dpf.core.operators.math.fft_multi_harmonic_minmax import fft_multi_harmonic_minmax

Property detail
---------------

.. py:property:: inputs
   :type: InputsFftMultiHarmonicMinmax


   Enables to connect inputs to the operator

   :returns: An instance of InputsFftMultiHarmonicMinmax.
   :rtype: inputs

.. py:property:: outputs
   :type: OutputsFftMultiHarmonicMinmax


   Enables to get outputs of the operator by evaluating it

   :returns: An instance of OutputsFftMultiHarmonicMinmax.
   :rtype: outputs

.. py:property:: progress_bar
   :type: bool


   Enable or disable progress bar display when requesting the operator's output.

   With this property, the user can choose to print a progress bar when
   the operator's output is requested, default is False

.. py:property:: config

   Copy of the operator's current configuration.

   You can modify the copy of the configuration and then use ``operator.config = new_config``
   or instantiate an operator with the new configuration as a parameter.

   For information on an operator's options, see the documentation for that operator.

   :returns: Copy of the operator's current configuration.
   :rtype: :class:`ansys.dpf.core.config.Config`

   .. rubric:: Examples

   Modify the copy of an operator's configuration and set it as current config
   of the operator.

   >>> from ansys.dpf import core as dpf
   >>> op = dpf.operators.math.add()
   >>> config_add = op.config
   >>> config_add.set_work_by_index_option(True)
   >>> op.config = config_add

.. py:property:: id
   :type: int


   Retrieve the unique identifier of the operator.

   This property returns the unique ID associated with the operator.
   This property is lazily initialized.

   :returns: The unique identifier of the operator.
   :rtype: int

   .. rubric:: Notes

   Property available with server's version starting at 10.0.

.. py:property:: specification

   Returns the Specification (or documentation) of this Operator.

   :rtype: Specification



Attribute detail
----------------

.. py:attribute:: name
   :value: None




Method detail
-------------

.. py:method:: default_config(server: ansys.dpf.core.server_types.AnyServerType = None) -> ansys.dpf.core.config.Config
   :staticmethod:


   Returns the default config of the operator.

   This config can then be changed to the user needs and be used to
   instantiate the operator. The Configuration allows to customize
   how the operation will be processed by the operator.

   :param server: Server with channel connected to the remote or local instance. When
                  ``None``, attempts to use the global server.

   :returns: A new Config instance equivalent to the default config for this operator.
   :rtype: config


.. py:method:: connect(pin, inpt, pin_out=0)

   Connect an input on the operator using a pin number.

   :param pin: Number of the input pin.
   :type pin: int
   :param inpt:
   :type inpt: str, int, double, bool, list[int], list[float], Field, FieldsContainer, Scoping,
   :param ScopingsContainer: Operator, os.PathLike Object to connect to.
   :param MeshedRegion: Operator, os.PathLike Object to connect to.
   :param MeshesContainer: Operator, os.PathLike Object to connect to.
   :param DataSources: Operator, os.PathLike Object to connect to.
   :param CyclicSupport: Operator, os.PathLike Object to connect to.
   :param dict: Operator, os.PathLike Object to connect to.
   :param Outputs: Operator, os.PathLike Object to connect to.
   :param pin_out: If the input is an operator, the output pin of the input operator. The default is ``0``.
   :type pin_out: int, optional

   .. rubric:: Examples

   Compute the minimum of displacement by chaining the ``"U"`` and ``"min_max_fc"`` operators.

   >>> from ansys.dpf import core as dpf
   >>> from ansys.dpf.core import examples
   >>> data_src = dpf.DataSources(examples.find_multishells_rst())
   >>> disp_op = dpf.operators.result.displacement()
   >>> disp_op.inputs.data_sources(data_src)
   >>> max_fc_op = dpf.operators.min_max.min_max_fc()
   >>> max_fc_op.inputs.connect(disp_op.outputs)
   >>> max_field = max_fc_op.outputs.field_max()
   >>> max_field.data
   DPFArray([[0.59428386, 0.00201751, 0.0006032 ]]...


.. py:method:: connect_operator_as_input(pin, op)

   Connect an operator as an input on a pin.

   :param pin: Number of the output pin. The default is ``0``.
   :type pin: int
   :param op: Requested type of the output. The default is ``None``.
   :type op: :class:`ansys.dpf.core.dpf_operator.Operator`


.. py:method:: get_output(pin=0, output_type=None)

   Retrieve the output of the operator on the pin number.

   To activate the progress bar for server version higher or equal to 3.0,
   use ``my_op.progress_bar=True``

   :param pin: Number of the output pin. The default is ``0``.
   :type pin: int, optional
   :param output_type: Requested type of the output. The default is ``None``.
   :type output_type: :class:`ansys.dpf.core.common.types`, type,  optional

   :returns: Output of the operator.
   :rtype: type


.. py:method:: __del__()

   Delete this instance.


.. py:method:: __str__()

   Describe the entity.

   :returns: Description of the entity.
   :rtype: str


.. py:method:: run()

   Evaluate this operator.


.. py:method:: eval(pin=None)

   Evaluate this operator.

   :param pin: Number of the output pin. The default is ``None``.
   :type pin: int

   :returns: **output** -- Returns the first output of the operator by default and the output of a
             given pin when specified. Or, it only evaluates the operator without output.
   :rtype: FieldsContainer, Field, MeshedRegion, Scoping

   .. rubric:: Examples

   Use the ``eval`` method.

   >>> from ansys.dpf import core as dpf
   >>> import ansys.dpf.core.operators.math as math
   >>> from ansys.dpf.core import examples
   >>> data_src = dpf.DataSources(examples.find_multishells_rst())
   >>> disp_op = dpf.operators.result.displacement()
   >>> disp_op.inputs.data_sources(data_src)
   >>> normfc = math.norm_fc(disp_op).eval()


.. py:method:: __add__(fields_b)

   Add two fields or two fields containers.

   :returns: **add**
   :rtype: operators.math.add_fc


.. py:method:: __sub__(fields_b)

   Subtract two fields or two fields containers.

   :returns: **minus**
   :rtype: operators.math.minus_fc


.. py:method:: __pow__(value)

   Raise each element of a field or a fields container to power 2.


.. py:method:: __mul__(value)

   Multiply two fields or two fields containers.

   :returns: **mul**
   :rtype: operators.math.generalized_inner_product_fc


.. py:method:: operator_specification(op_name, server=None)
   :staticmethod:


   Documents an Operator with its description (what the Operator does),its inputs and outputs and some properties.


.. py:method:: __truediv__(inpt)

   Perform division with another operator or a scalar.

   This method allows the use of the division operator (`/`) between an
   `Operator` instance and either another `Operator` or a scalar value (float).





